# vybim

./: .gitignore  Cargo.toml  README.md
.github/workflows/: backfill-v0.3.0-notes.yml  release.yml  rust.yml
openspec/changes/archive/2026-06-27-mvp-editor-foundation/: design.md  proposal.md
openspec/changes/archive/2026-06-27-mvp-editor-foundation/specs/app-shell/: spec.md
openspec/changes/archive/2026-06-27-mvp-editor-foundation/specs/file-tree/: spec.md
openspec/changes/archive/2026-06-27-mvp-editor-foundation/specs/integrated-terminal/: spec.md
openspec/changes/archive/2026-06-27-mvp-editor-foundation/specs/pane-layout/: spec.md
openspec/changes/archive/2026-06-27-mvp-editor-foundation/specs/syntax-highlighting/: spec.md
openspec/changes/archive/2026-06-27-mvp-editor-foundation/specs/text-editing/: spec.md
openspec/changes/mvp-editor-foundation/: tasks.md
openspec/specs/app-shell/: spec.md
openspec/specs/file-tree/: spec.md
openspec/specs/integrated-terminal/: spec.md
openspec/specs/pane-layout/: spec.md
openspec/specs/syntax-highlighting/: spec.md
openspec/specs/text-editing/: spec.md
src/: app.rs  buffer.rs  complete.rs  diff_view.rs  file_find.rs  file_tree.rs  git.rs  jump.rs  main.rs  minibuffer.rs  pane.rs  syntax.rs  terminal.rs  terminal_area.rs  terminal_pane.rs  theme.rs  view.rs
src/lsp/: client.rs  mod.rs  protocol.rs  registry.rs  transport.rs
