[package]
name = "nyxvim"
version = "0.1.0"
edition = "2024"
description = "A minimalist, snappy, modeless terminal code editor"
license = "MIT"
repository = "https://github.com/Guiartuzo/NyxVim"

[dependencies]
crossterm = "0.29.0"
portable-pty = "0.9.0"
ratatui = "0.30.2"
ropey = "1.6.1"
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
tree-sitter-rust = "0.24.2"
vt100 = "0.16.2"
walkdir = "2.5.0"
