[package]
name = "vybim"
version = "0.2.1"
edition = "2024"
description = "A minimalist, snappy, modeless terminal code editor"
license = "MIT"
repository = "https://github.com/Guiartuzo/vybim"

[dependencies]
crossterm = "0.29.0"
lsp-types = "0.97.0"
portable-pty = "0.9.0"
ratatui = "0.30.2"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
similar = "3.1.1"
tree-sitter = "0.26.9"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-highlight = "0.26.9"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
vt100 = "0.16.2"
walkdir = "2.5.0"
